--- a/Start9.Host/Windows/MarketWindow.xaml
+++ b/Start9.Host/Windows/MarketWindow.xaml
@@ -1,17 +1,15 @@
-﻿<apictrl:DecoratableWindow x:Class="Start9.Host.Windows.MarketWindow"
+﻿<win:DecoratableWindow x:Class="Start9.Host.Windows.MarketWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:apictrl="clr-namespace:Start9.Api.Controls;assembly=Start9.Api"
+        xmlns:ui="clr-namespace:Start9.UI.Wpf;assembly=Start9.UI.Wpf"
+        xmlns:win="clr-namespace:Start9.UI.Wpf.Windows;assembly=Start9.UI.Wpf"
         xmlns:cont="clr-namespace:Start9.Host.Controls"
         mc:Ignorable="d"
         Title="MarketWindow" Height="450" Width="800">
-    <apictrl:DecoratableWindow.Resources>
+    <win:DecoratableWindow.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Start9.Api;component/Themes/Plex.xaml" />
-            </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="cont:MarketItem">
                 <!--Setter Property="Width" Value="275"/>
@@ -32,7 +30,7 @@
                                 <Grid.Effect>
                                     <DropShadowEffect Color="Black" Direction="320" ShadowDepth="1" BlurRadius="3" Opacity="0.375"/>
                                 </Grid.Effect>
-                                <apictrl:Planerator x:Name="PART_Perspective" UseLayoutRounding="True">
+                                <ui:Planerator x:Name="PART_Perspective" UseLayoutRounding="True">
                                     <ContentControl>
                                         <ContentControl.Content>
                                             <Grid Background="#01000000">
@@ -135,7 +133,7 @@
                                             </Grid>
                                         </ContentControl.Content>
                                     </ContentControl>
-                                </apictrl:Planerator>
+                                </ui:Planerator>
                             </Grid>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsPressed" Value="True">
@@ -204,7 +202,7 @@
                 </Style.Triggers>
             </Style>
         </ResourceDictionary>
-    </apictrl:DecoratableWindow.Resources>
+    </win:DecoratableWindow.Resources>
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
             <DockPanel Margin="0,0,-15,0">
@@ -247,4 +245,4 @@
             </DockPanel>
         </ScrollViewer>
     </Grid>
-</apictrl:DecoratableWindow>
+</win:DecoratableWindow>
